--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "bun-promptx": "^0.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jsdoc": "^48.2.0"
   }
